<resources>
    <string name="app_name">Betitarev</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="name">Name</string>
    <string name="action_save">Save</string>
    <string name="family_name">Family Name</string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="hint_family_name">family name</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_place_bet">PlaceBetActivity</string>
    <string name="title_activity_opened_bet">OpenedBetActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_bottom_navigation_behavior">BottomNavigationBehavior</string>
    <string name="title_activity_my_application">MyApplicationActivity</string>
    <string name="title_opened_bet">Opened Bets</string>
    <string name="title_place_bet">Place a Bet</string>
    <string name="title_statistics">Statistics</string>
    <string name="app_label">Betitarev</string>
    <string name="search_hint">Friends</string>
    <string name="action_search">Search</string>
    <string name="hello_world">hello world</string>
    <string name="add_friend">Add friend</string>
    <string name="Add_arbitrator">Add arbitrator</string>
    <string name="bet_phrase">Bet phrase</string>
    <string name="without_arbitrator">Without arbitrator</string>
    <string name="with_arbitrator">With arbitrator</string>
    <string name="bet_value">Bet value</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="search">Search</string>
    <string name="title_activity_search_results">SearchActivity</string>
    <string name="search_bettor">Search bettor</string>
    <string name="search_arbitrator">Search arbitrator</string>
    <string name="btn_save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="title_activity_another_file">AnotherFileActivity</string>
    <string name="title_activity_another_profile">AnotherProfileActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>

    <string name="msg_token_fmt">Message Token</string>
    <string name="default_notification_channel_id">Default Notif</string>
    <string name="fcm_message">Message</string>
    <string name="title_activity_confirm_bet">ConfirmBetActivity</string>

</resources>
