<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_place_bet"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/title_place_bet" />

    <item
        android:id="@+id/navigation_opened_bet"
        android:icon="@drawable/ic_card_giftcard_white_24dp"
        android:title="@string/title_opened_bet" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>