<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.PlaceBetActivity"
        tools:showIn="@layout/activity_place_bet"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                android:popupTheme="@style/AppTheme.PopupOverlay"
                android:title="@string/title_place_bet"
                tools:targetApi="lollipop" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/search_friend"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_bettor"
                    android:inputType="textVisiblePassword"
                    android:padding="16dp" />

            </android.support.design.widget.TextInputLayout>

            <ListView
                android:id="@+id/list_friend"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bet_phrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bet_phrase"
                    android:inputType="text"
                    android:padding="16dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bet_guessing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bet_guessing"
                    android:inputType="text"
                    android:padding="16dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bet_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bet_value"
                    android:drawableLeft = "@drawable/ic_attach_money_white_24dp"
                    android:inputType="numberDecimal"
                    android:padding="16dp"
                    android:text="" />


            </android.support.design.widget.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/without_arb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/without_arbitrator" />

                <RadioButton
                    android:id="@+id/with_arb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with_arbitrator" />

            </RadioGroup>

            <EditText
                android:id="@+id/search_arbitrator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_arbitrator"
                android:inputType="textVisiblePassword"
                android:visibility="gone" />

            <ListView
                android:id="@+id/list_arbitrator"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <Button
                android:id="@+id/send_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:layout_gravity="bottom"
                android:text="@string/send_request" />

            <!-- This button fix the issue of the scroll view but this is not the best
            solution implementation we could have, maybe we're able to fix the problem
            with another solution. -->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>